--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <div class="container">
         <div class="social-links">
           <a href="https://www.youtube.com/@visionaryvault_ai" class="twitter"><i class="fa fa-youtube-play"></i></a>
-          <a href="https://www.instagram.com/sadn.uk/" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="https://www.instagram.com/sadn.uk/" class="linkedin"><i class="fa fa-linkedin"></i></a>
-          <a href="https://www.instagram.com/sadn.uk/" class="instagram"><i class="fa fa-instagram"></i></a>
+          <a href="https://www.instagram.com/sadn.co.uk/" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.instagram.com/sadn.co.uk/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/sadn.co.uk/" class="instagram"><i class="fa fa-instagram"></i></a>
         </div>
       </div>
     </div>
@@ -758,7 +758,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
                   <div class="footer-info">
                     <h3>SADN</h3>
-                    <p>SADN.uk specializes in delivering innovative digital solutions, including custom web design, app development, digital marketing, branding, and eCommerce services. We empower businesses across industries with creative strategies, cutting-edge technology, and ongoing support to achieve their goals and stand out online.</p>
+                    <p>sadn.co.uk specializes in delivering innovative digital solutions, including custom web design, app development, digital marketing, branding, and eCommerce services. We empower businesses across industries with creative strategies, cutting-edge technology, and ongoing support to achieve their goals and stand out online.</p>
                   </div>
                   <div class="footer-newsletter">
                     <h4>Our Newsletter</h4>
@@ -790,15 +790,15 @@ document.addEventListener('DOMContentLoaded', () => {
                       Pakistan <br>
                       United States <br>
                       <strong>Phone:</strong> +1 647 457 8328<br>
-                      <strong>Email:</strong> info@sadn.uk<br>
+                      <strong>Email:</strong> info@sadn.co.uk<br>
                     </p>
                   </div>
 
                   <div class="social-links">
                     <a href="https://youtube.com/@visionaryvault_ai" class="Youtube"><i class="fa fa-youtube-play"></i></a>
-                    <a href="https://www.instagram.com/sadn.uk/" class="facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/sadn.uk/" class="instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="https://www.instagram.com/sadn.uk/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/sadn.co.uk/" class="facebook"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/sadn.co.uk/" class="instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/sadn.co.uk/" class="linkedin"><i class="fa fa-linkedin"></i></a>
                   </div>
 
                 </div>
@@ -825,7 +825,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message" required></textarea>
       </div>
       <div id="success-message" style="display: none; color: green;">Message received, congratulations on taking the first step! We are on it and will respond to you promptly. Thank you for getting in touch!</div>
-      <div id="error-message" style="display: none; color: red;">An error occurred and We Apologize. Please Contact Us at info@sadn.uk</div>
+      <div id="error-message" style="display: none; color: red;">An error occurred and We Apologize. Please Contact Us at info@sadn.co.uk</div>
       <div class="text-center">
         <button type="submit" id="sendMessageButton" title="Send Message">Send Message</button>
       </div>
@@ -852,7 +852,7 @@ document.addEventListener('DOMContentLoaded', () => {
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Rapid
         -->
-        Designed by <a href="https://sadn.uk/"> sadn.uk</a>
+        Designed by <a href="https://sadn.co.uk/"> sadn.co.uk</a>
       </div>
     </div>
   </footer><!-- #footer -->
