--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     <div class="container">
       <div class="copyright">
-        &copy; 2024, <strong>The Visionary Vault</strong>. All Rights Reserved.
+        &copy; 2025, <strong>Newolve LLC</strong>. All Rights Reserved.
       </div>
       <div class="credits">
         <!--
